[package]
name = "rdp_update"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.34"
clap = { version = "4.5.1", features = ["derive"] }
configparser = "3.0.4"
reqwest = {version = "0.11.24", features = ["blocking"]}

[profile.release]
lto = true
codegen-units = 1
opt-level = 'z'
