[package]
name = "rdp_update"
version = "0.2.2"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.34"
clap = { version = "4.5.1", features = ["derive"] }
configparser = "3.0.4"
reqwest = {version = "0.12.0", features = ["blocking"]}
windows_service_controller = {version = "0.1.5",git = "https://github.com/1412150209/rc_windows_service_controller"}
native-dialog = { version = "0.7.0", features = ["windows_dpi_awareness"] }

[profile.release]
lto = true
codegen-units = 1
opt-level = 'z'

[build-dependencies]
winres = "0.1.12"
